Setup keybind and weapon spawning

--- a/customMod/Adds/config.cfg
+++ b/customMod/Adds/config.cfg
@@ -9,16 +9,16 @@ bind , "+moveleft"
 bind - "sizedown"
 bind . "+moveright"
 bind / "weapnext"
-bind 0 "use BFG10K"
-bind 1 "use Blaster"
-bind 2 "use HyperBlaster"
-bind 3 "use Shotgun"
-bind 4 "use Super Shotgun"
-bind 5 "use Machinegun"
-bind 6 "use Rocket Launcher"
-bind 7 "use Chaingun"
-bind 8 "use Grenade Launcher"
-bind 9 "use Railgun"
+bind 0 "use MageHand"
+bind 1 "use Sword"
+bind 2 "use Spear"
+bind 3 "use Hammer"
+bind 4 "use SPHammer"
+bind 5 "use Daggers"
+bind 6 "use Ballista"
+bind 7 "use SPBallista"
+bind 8 "use Cannon"
+bind 9 "use FireBallSpell"
 bind = "sizeup"
 bind [ "invprev"
 bind \ "+mlook"
@@ -28,8 +28,8 @@ bind a "+moveleft"
 bind b "use rebreather"
 bind c "+movedown"
 bind d "+moveright"
-bind e "use environment suit"
-bind g "use grenades"
+bind e "use Reflect"
+bind g "use Shield"
 bind h "helpModMenu"
 bind i "use invulnerability"
 bind j "wave 1"
