--- a/game/game.vcxproj
+++ b/game/game.vcxproj
@@ -470,7 +470,9 @@
   <ItemGroup>
     <ClInclude Include="g_local.h" />
     <ClInclude Include="game.h" />
-    <ClInclude Include="g_highln.h" />
+    <ClInclude Include="g_melee.h" />
+    <ClInclude Include="g_ranged.h" />
+    <ClInclude Include="g_magic.h" />
     <ClInclude Include="m_actor.h" />
     <ClInclude Include="m_berserk.h" />
     <ClInclude Include="m_boss2.h" />
